--- a/src/TechTalkers.Web/src/TechTalkers.Web/wwwroot/index.html
+++ b/src/TechTalkers.Web/src/TechTalkers.Web/wwwroot/index.html
@@ -88,87 +88,7 @@
     <script src="lib/angular-messages/angular-messages.js"></script>
     <script src="lib/svg-assets-cache.js/svg-assets-cache.js"></script>
     <script src="lib/angular-material/angular-material.js"></script>
-    <script>
-        // Include app dependency on ngMaterial
-
-        angular
-            .module('techtalkers.core', ['ngMaterial', 'ngMessages', 'material.svgAssetsCache'])
-            .config(function($mdThemingProvider) {
-                $mdThemingProvider.theme('default')
-                    .primaryPalette('teal')
-                    .accentPalette('orange').dark();
-            })
-            .controller('AppCtrl', function($scope, $timeout, $mdSidenav, $log) {
-                $scope.toggleLeft = buildDelayedToggler('left');
-                $scope.toggleRight = buildToggler('right');
-                $scope.isOpenRight = function() {
-                    return $mdSidenav('right').isOpen();
-                };
-
-                /**
-                 * Supplies a function that will continue to operate until the
-                 * time is up.
-                 */
-                function debounce(func, wait, context) {
-                    var timer;
-
-                    return function debounced() {
-                        var context = $scope,
-                            args = Array.prototype.slice.call(arguments);
-                        $timeout.cancel(timer);
-                        timer = $timeout(function() {
-                            timer = undefined;
-                            func.apply(context, args);
-                        }, wait || 10);
-                    };
-                }
-
-                /**
-                 * Build handler to open/close a SideNav; when animation finishes
-                 * report completion in console
-                 */
-                function buildDelayedToggler(navID) {
-                    return debounce(function() {
-                        // Component lookup should always be available since we are not using `ng-if`
-                        $mdSidenav(navID)
-                            .toggle()
-                            .then(function() {
-                                $log.debug("toggle " + navID + " is done");
-                            });
-                    }, 200);
-                }
-
-                function buildToggler(navID) {
-                    return function() {
-                        // Component lookup should always be available since we are not using `ng-if`
-                        $mdSidenav(navID)
-                            .toggle()
-                            .then(function() {
-                                $log.debug("toggle " + navID + " is done");
-                            });
-                    }
-                }
-            })
-            .controller('LeftCtrl', function($scope, $timeout, $mdSidenav, $log) {
-                $scope.close = function() {
-                    // Component lookup should always be available since we are not using `ng-if`
-                    $mdSidenav('left').close()
-                        .then(function() {
-                            $log.debug("close LEFT is done");
-                        });
-
-                };
-            })
-            .controller('RightCtrl', function($scope, $timeout, $mdSidenav, $log) {
-                $scope.close = function() {
-                    // Component lookup should always be available since we are not using `ng-if`
-                    $mdSidenav('right').close()
-                        .then(function() {
-                            $log.debug("close RIGHT is done");
-                        });
-                };
-            });
-    </script>
+    <script src="app/core/techtalkers.core.js"></script>
 
 </body>
 
